; ModuleID = '/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_es.c_MpgaXingLameConvertGain.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/demux/mpeg/extr_es.c_MpgaXingLameConvertGain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32)* @MpgaXingLameConvertGain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @MpgaXingLameConvertGain(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca double, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = and i32 %4, 511
  %6 = sitofp i32 %5 to double
  %7 = fdiv double %6, 1.000000e+01
  store double %7, double* %3, align 8
  %8 = load i32, i32* %2, align 4
  %9 = and i32 %8, 512
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %14

11:                                               ; preds = %1
  %12 = load double, double* %3, align 8
  %13 = fneg double %12
  br label %16

14:                                               ; preds = %1
  %15 = load double, double* %3, align 8
  br label %16

16:                                               ; preds = %14, %11
  %17 = phi double [ %13, %11 ], [ %15, %14 ]
  ret double %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
